igw.tf
resource "aws_internet_gateway" "myigw" {
  vpc_id = "${aws_vpc.mvpc.id}"

  tags = {
    Name = "myigw"
  }
}
